# AlmondGUI

./: .gitignore  .gitmodules  CMakeLists.txt  Project.xcconfig  README.md  build.sh  doxygenconf  makedocs.sh
AlmondGUI.xcodeproj/: project.pbxproj
AlmondGUI.xcodeproj/project.xcworkspace/xcuserdata/daniel.almeida.xcuserdatad/: UserInterfaceState.xcuserstate
AlmondGUI.xcodeproj/project.xcworkspace/xcuserdata/daniel.xcuserdatad/: UserInterfaceState.xcuserstate
AlmondGUI.xcodeproj/xcuserdata/daniel.almeida.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AlmondGUI.xcodeproj/xcuserdata/daniel.almeida.xcuserdatad/xcschemes/: HelloWorld.xcscheme  xcschememanagement.plist
AlmondGUI.xcodeproj/xcuserdata/daniel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AlmondGUI.xcodeproj/xcuserdata/daniel.xcuserdatad/xcschemes/: xcschememanagement.plist
Decorators/: Decorator.cpp  Decorator.hpp  ResetButtonDecorator.cpp  ResetButtonDecorator.hpp  SliderDecorator.cpp  SliderDecorator.hpp
Sources/: Button.cpp  Button.hpp  ButtonGroup.cpp  ButtonGroup.hpp  ContainerBase.cpp  ContainerBase.hpp  Decorator.hpp  Element.cpp  Element.hpp  ElementStyle.cpp  ElementStyle.hpp  GUI.cpp  GUI.hpp  GUIStyle.cpp  GUIStyle.hpp  ImageMatrix.cpp  ImageMatrix.hpp  Label.cpp  Label.hpp  Macros.hpp  Preview.cpp  Preview.hpp  Primitives.cpp  Primitives.hpp  ResetButtonDecorator.cpp  ResetButtonDecorator.hpp  Slider.cpp  Slider.hpp  SliderDecorator.cpp  SliderDecorator.hpp  Splitter.cpp  Splitter.hpp  Table.cpp  Table.hpp  ToggleButton.cpp  ToggleButton.hpp  ToggleButtonGroup.cpp  ToggleButtonGroup.hpp  VerticalSlider.cpp  VerticalSlider.hpp  (+4 more)
Sources/Containers/: ContainerBase.cpp  ContainerBase.hpp  PaginatedViewport.cpp  PaginatedViewport.hpp  Splitter.cpp  Splitter.hpp  Table.cpp  Table.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp
Sources/Decorators/: Decorator.cpp  Decorator.hpp  ResetButtonDecorator.cpp  ResetButtonDecorator.hpp  SliderDecorator.cpp  SliderDecorator.hpp
Sources/Interfaces/: ChildInterface.hpp  ContainerInterface.hpp  DrawableInterface.hpp  ElementInterface.hpp  ScrollableInterface.hpp
examples/Gallery/: ofApp.cpp  ofApp.h
examples/HelloWorld/: README.md  main.cpp  ofApp.cpp  ofApp.h
examples/ImageMatrix/: README.md  ofApp.cpp  ofApp.h
examples/Paginated_viewport/: README.md  ofApp.cpp  ofApp.h
examples/ResetButtonDecorator/: README.md  ofApp.cpp
examples/Splitter in Splitter/: ofApp.cpp
examples/Splitter_in_splitter/: main.cpp  ofApp.cpp
examples/Splitters/: ofApp.cpp  ofApp.h
examples/Table/: ofApp.cpp  ofApp.h
examples/Viewport/: main.cpp  ofApp.cpp  ofApp.h
examples/Viewport_in_splitter/: ofApp.cpp
examples/Windows/: main.cpp  ofApp.cpp  ofApp.h
ofxAlmondGUI.xcodeproj/: project.pbxproj
ofxAlmondGUI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ofxAlmondGUI.xcodeproj/project.xcworkspace/xcshareddata/: ofxAlmondGUI.xcscmblueprint
tests/: Button.cpp  ButtonGroup.cpp  Element.cpp  GUI.cpp  ResetButtonDecorator.cpp  Splitter.cpp  Table.cpp  VerticalSlider.cpp  Viewport.cpp  main.cpp
(+29 files in other folders)
